--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "style-loader": "^2.0.0",
     "vue-loader": "^15.9.5",
